deployment/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: juice-shop
  labels:
    app.kubernetes.io/name: juice-shop
