deployment/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
  namespace: juice-shop
  labels:
    app.kubernetes.io/name: juice-shop
spec:
  selector:
    app.kubernetes.io/name: juice-shop
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
